common-applications/control/vault/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      nodeSelector:
        vault: "true"
      containers:
        - args:
          - --provider=oidc
          - --email-domain=*
          - --upstream=http://standalone-vault.vault.svc.cluster.local:8200
          - --http-address=0.0.0.0:4180
          - --provider-display-name=authing
          - --insecure-oidc-allow-unverified-email=true
          - --redirect-url=https://secret.osinfra.cn/oauth2/callback
          - --oidc-issuer-url=https://vault.authing.cn/oidc
          - --skip-auth-regex=^/v1/
          - --cookie-expire=6h0m0s
          - --session-cookie-minimal=false
          - --pass-access-token=true
          - --cookie-secure=false
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:4b64a9c04a247dd5da3ff664d9d497c902324c3a
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: oauth2-proxy
#spec:
#  rules:
#    - host: secret.osinfra.cn
#      http:
#        paths:
#          - backend:
#              serviceName: oauth2-proxy
#              servicePort: 4180
#            path: /oauth2
#  tls:
#    - hosts:
#        - secret.osinfra.cn
#      secretName: vault-tls
