common-applications/control/vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: vault
  namespace: vault
spec:
  tls:
    - hosts:
        - secret.osinfra.cn
      secretName: vault-new-tls
  rules:
    - host: secret.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
